--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,13 +1,37 @@
+// For format details, see https://aka.ms/devcontainer.json. For config options, see the
+// README at: https://github.com/devcontainers/templates/tree/main/src/ubuntu
 {
 	"name": "Network Simulator (ns-2)",
 	"build": {
 		"dockerfile": "Dockerfile"
 	},
+
+	// Features to add to the dev container. More info: https://containers.dev/features.
 	"features": {
 		"ghcr.io/devcontainers/features/desktop-lite:1": {
 			"password": "vscode",
 			"webPort": "6080",
 			"vncPort": "5901"
+		},
+		"ghcr.io/devcontainers/features/git:1": {}
+	},
+
+	// Forward noVNC port locally, mark required
+	"forwardPorts": [6080],
+	"portsAttributes": {
+		"6080": {
+			"label": "noVNC",
+			"requireLocalPort": true,
+			"onAutoForward": "ignore"
 		}
-	}
+	},
+	
+	// Use 'postCreateCommand' to run commands after the container is created.
+	// "postCreateCommand": "uname -a",
+
+	// Configure tool-specific properties.
+	// "customizations": {},
+	
+	// Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
+	// "remoteUser": "root"
 }
